Resources/Public/Backend/Css/Skin/t3skin_override.css
.t3-page-column {
  min-width: 0px;
  max-width: none;
}

.t3-page-column-header {
  min-width: 95px;
  padding: 5px 10px;
}

.t3-page-ce-header {
  min-width: 195px;
}

.t3-page-columns {
  border-spacing: 10px!important;
}

.t3-page-ce:hover .t3-page-ce-header {
  background: #eaeaea;
}

.t3-page-ce:hover > div > .t3-page-ce-header {
  background: #d0d0d0;
}

.t3-page-ce:hover .t3-page-ce-header, .t3-page-ce:hover .t3-page-ce-body {
  border-color: #cccccc;
  -webkit-box-shadow: none;
  box-shadow: none;
}

.t3-page-ce:hover > div > .t3-page-ce-header, .t3-page-ce:hover > div > .t3-page-ce-body {
  border-color: #aaaaaa;
  -webkit-box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.15);
  box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.15);
}

